--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,8 @@ build:
  image: docker:24.0.2 
  services: 
   - docker:24.0.2-dind 
-before_script: - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
+before_script: 
+  - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
 script: # Build və push commit SHA tag
  - docker build -t "$IMAGE" . 
  - docker push "$IMAGE" 
