Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,33 +3,37 @@ variables:
   KUBE_CONTEXT: "javid006/front-end:front-end"
 
 stages:
-  - build 
+  - build
   - deploy
 
-build: 
-  stage: build 
-  image: docker:24.0.2 
-  services: 
-    - docker:24.0.2-dind 
-before_script: 
-    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
-script: # Build və push commit SHA tag
-    - docker build -t "$IMAGE" . 
-    - docker push "$IMAGE" 
- # Əlavə olaraq 'latest' tag 
-    - docker tag "$IMAGE" "$CI_REGISTRY_IMAGE:latest" 
-    - docker push "$CI_REGISTRY_IMAGE:latest" 
- only: 
-   - main
+build:
+  stage: build
+  script:
+    # Build və push commit SHA tag
+    - docker build -t "$IMAGE" .
+    - docker push "$IMAGE"
 
-deploy: 
-  stage: deploy 
-  image: 
-    name: bitnami/kubectl:latest 
-  script: 
-  # Kubeconfig daxil edin və deployment edin 
-    - kubectl config set-context "$KUBE_CONTEXT" 
-    - kubectl apply -f k8s/deployment.yaml 
-    - kubectl apply -f k8s/service.yaml 
-  only: 
+    # 'latest' tag yarad və push et
+    - docker tag "$IMAGE" "$CI_REGISTRY_IMAGE:latest"
+    - docker push "$CI_REGISTRY_IMAGE:latest"
+  only:
+    - main
+
+deploy:
+  stage: deploy
+  image:
+    name: bitnami/kubectl:latest
+    entrypoint: [""]
+  script:
+    # Kube context seçimi
+    - kubectl config get-contexts
+    - kubectl config use-context "$KUBE_CONTEXT"
+
+    # Deployment YAML-da IMAGE dəyişənini dəyişdir
+    - sed "s|${IMAGE}|${CI_REGISTRY_IMAGE}:latest|g" k8s/deployment.yaml > k8s/deployment-applied.yaml
+    - kubectl apply -f k8s/deployment-applied.yaml
+
+    # Service tətbiq et
+    - kubectl apply -f k8s/service.yaml
+  only:
     - main
