--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 variables:
   IMAGE: "$CI_REGISTRY_IMAGE:$CI_COMMIT_SHORT_SHA"
-  KUBE_CONTEXT: "javid006/front-end:front-end"
+  KUBE_CONTEXT: "javidmm.006/front-end:front-end"
 
 stages:
   - build
@@ -8,32 +8,38 @@ stages:
 
 build:
   stage: build
+  image: docker:24.0.2
+  services:
+    - docker:24.0.2-dind
+  before_script:
+    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
   script:
     # Build və push commit SHA tag
     - docker build -t "$IMAGE" .
     - docker push "$IMAGE"
 
-    # 'latest' tag yarad və push et
+    # əlavə olaraq 'latest' tag da yaradılır və push olunur
     - docker tag "$IMAGE" "$CI_REGISTRY_IMAGE:latest"
     - docker push "$CI_REGISTRY_IMAGE:latest"
+
   only:
     - main
 
 deploy:
   stage: deploy
-  image:
-    name: bitnami/kubectl:latest
-    entrypoint: [""]
+  image: bitnami/kubectl:latest
+  entrypoint: [""]
   script:
-    # Kube context seçimi
+    # Kube konteksti seçilir
     - kubectl config get-contexts
     - kubectl config use-context "$KUBE_CONTEXT"
 
-    # Deployment YAML-da IMAGE dəyişənini dəyişdirr
-    - sed "s|${IMAGE}|${CI_REGISTRY_IMAGE}:latest|g" k8s/deployment.yaml > k8s/deployment-applied.yaml
+    # Deployment YAML-da IMAGE dəyişənini əvəz edir
+    - sed "s#\$IMAGE#$CI_REGISTRY_IMAGE:latest#g" k8s/deployment.yaml > k8s/deployment-applied.yaml
     - kubectl apply -f k8s/deployment-applied.yaml
 
-    # Service tətbiq et
+    # Service tətbiq edilir
     - kubectl apply -f k8s/service.yaml
+
   only:
     - main
