--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,8 +27,9 @@ build:
 
 deploy:
   stage: deploy
-  image: bitnami/kubectl:latest
-  entrypoint: [""]
+  image: 
+    name: bitnami/kubectl:latest
+    entrypoint: [""]
   script:
     # Kube konteksti seçilir
     - kubectl config get-contexts
