--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: front-end-deployment
+  name: front-end-service
 spec:
   type: NodePort
   selector:
@@ -10,4 +10,4 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 80
-      nodePort: 30081
+      nodePort: 30080
